# january

./: Cargo.toml  Dockerfile  NOTES  README.md  flake.nix  publish.sh  set_version.sh
.github/workflows/: docker.yml  rust.yaml
src/: main.rs
src/routes/: embed.rs  mod.rs  proxy.rs
src/structs/: embed.rs  media.rs  metadata.rs  mod.rs  special.rs
src/util/: mod.rs  request.rs  result.rs  variables.rs
