[package]
name = "january"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
imagesize = "0.8.8"
reqwest = "0.11.3"
scraper = "0.12.0"
serde_json = "1"
mime = "0.3.16"
serde = "1"