[package]
name = "january"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
lazy_static = "1.4.0"
imagesize = "0.8.8"
reqwest = "0.11.3"
scraper = "0.12.0"
serde_json = "1"
mime = "0.3.16"
serde = "1"
regex = "1"
log = "0.4.14"
env_logger = "0.8.4"
